# microVis

./: .gitignore  20260521.xlsx  LICENSE  README.md  __main__.py  _settings.py  app.py  main_window.py  micro.yml  pyproject.toml
.github/workflows/: publish.yml
io/: data_module.py
processing/: compositing.py  contrast.py  overlay.py
src/microVis/: __init__.py  __main__.py  _settings.py  _shortcut.py  app.py  cli.py  log_utils.py  main_window.py  worker.py
src/microVis/io/: __init__.py  data_module.py
src/microVis/processing/: __init__.py  compositing.py  contrast.py  model_arch.py  model_dataset.py  model_eval.py  model_worker.py  overlay.py
src/microVis/resources/: style.qss
src/microVis/widgets/: _event_filter.py  channel_controls.py  data_view.py  folder_selector.py  image_controls.py  image_display.py  label_annotation.py  model_controls.py  model_view.py  pixel_info.py  well_grid_canvas.py  well_grid_controls.py
src/microVis/workers/: image_worker.py
tests/: conftest.py  test_compositing.py  test_contrast.py  test_data_module.py  test_overlay.py  test_settings.py
widgets/: _event_filter.py  channel_controls.py  data_view.py  folder_selector.py  image_controls.py  image_display.py  pixel_info.py  well_grid_canvas.py  well_grid_controls.py
workers/: image_worker.py
