[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microVis"
version = "0.2.0"
description = "Interactive desktop GUI for visualizing microProfiler microscopy datasets"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hao He" }]
dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
microvis = "microVis.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microVis"]

[tool.hatch.build.targets.wheel.shared-data]
"src/microVis/py.typed" = "py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
