[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microVis"
version = "0.3.0"
description = "Interactive desktop GUI for visualizing microProfiler microscopy datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hao He" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-image>=0.22",
    "pygwalker>=0.4",
    "openpyxl>=3.1",
    "natsort>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/soulong/microVis"
Repository = "https://github.com/soulong/microVis"

[project.scripts]
microvis = "microVis.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microVis"]

[tool.hatch.build.targets.wheel.shared-data]
"src/microVis/py.typed" = "py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
