[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microVis-python"
dynamic = ["version"]
description = "Interactive desktop GUI for visualizing microProfiler microscopy datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hao He" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["microscopy", "image-visualization", "data-plot"]
dependencies = [
    "natsort",
    "numpy",
    "pandas",
    "openpyxl",
    "matplotlib",
    "pygwalker",
    "PySide6",
    "scikit-image",
    "tifffile",
]

[project.urls]
Homepage = "https://github.com/soulong/microVis"
Repository = "https://github.com/soulong/microVis"

[project.scripts]
microvis = "microVis.__main__:main"
microvis-install-shortcut = "microVis._shortcut:create_shortcut"

[tool.hatch.build.targets.wheel]
packages = ["src/microVis"]

[tool.hatch.version]
path = "src/microVis/__init__.py"
